# Camper-Weather-Information-Station

./: .gitignore  CMakeLists.txt  ERORS.txt  README.md  lv_conf.h  partitions.csv  sdkconfig.defaults
components/drivers/: CMakeLists.txt
components/drivers/clock/: ds3231.c  ds3231.h
components/drivers/display/: backlight.c  backlight.h  display.c  display.h
components/drivers/gps/: gps.c  gps.h
components/drivers/i2c/: i2c_bus.c  i2c_bus.h  i2c_bus1.c  i2c_bus1.h  i2c_manager.c  i2c_manager.h
components/drivers/sensors/: bh1750.c  bh1750.h  ds18b20.c  ds18b20_driver.h  ina3221.c  ina3221.h  mpu6050.c  mpu6050.h  scd41.c  scd41.h  victron_driver.c  victron_driver.h
components/drivers/touch/: touch_gt911.c  touch_gt911.h
components/logic/: CMakeLists.txt  brightness.c  brightness.h  gpio_monitor.c  gpio_monitor.h  settings.c  settings.h  storage.c  storage.h  storage_coords.c  storage_coords.h
components/logic/calibration/: calibration.c  calibration.h  tank_levels.c  tank_levels.h
components/logic/time/: time_bg.h  time_format.c  time_format.h
components/network/: CMakeLists.txt
components/network/location/: location.c  location.h
components/network/weather/: seas.c  seas.h  weather.c  weather.h  weather_coords.c  weather_coords.h  weather_http.c  weather_http.h
components/network/wifi/: time_sync.c  time_sync.h  wifi.c  wifi.h  wifi_roaming.c  wifi_roaming.h  wifi_storage.c  wifi_storage.h
components/tasks/: CMakeLists.txt  brightness_task.c  brightness_task.h  ds18b20_task.c  ds18b20_task.h  gps_raw_logger.c  gps_raw_logger.h  location_task.c  location_task.h  scd41_task.c  scd41_task.h  sensor_task.c  sensor_task.h  time_task.c  time_task.h  victron_task.c  victron_task.h  weather_task.c  weather_task.h
components/ui/: CMakeLists.txt  settings_ui.c  settings_ui.h  ui_Nivel.c  ui_Nivel.h  ui_location.c  ui_location.h  ui_time.c  ui_time.h  ui_update_ds18b20.c  ui_update_ds18b20.h  ui_update_ina.c  ui_update_ina.h  ui_update_mpu.c  ui_update_mpu.h  ui_update_scd41.c  ui_update_scd41.h  ui_update_victron.c  ui_update_victron.h  ui_weather.c  ui_weather.h
components/ui/charts/: lv_daily_chart.c  lv_daily_chart.h  lv_hourly_chart.c  lv_hourly_chart.h
components/ui/config/: config.h
components/ui/squareline/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
components/ui/squareline/fonts/: ui_font_Font1.c  ui_font_FreeSaansBold52.c  ui_font_FreeSaansBold58.c  ui_font_FreeSans10.c  ui_font_FreeSans14.c  ui_font_FreeSans16.c  ui_font_FreeSans18.c  ui_font_FreeSans20.c  ui_font_FreeSans22.c  ui_font_FreeSans24.c  ui_font_FreeSansBold24.c  ui_font_FreeSansBold38.c  ui_font_FreeSansBold44.c  ui_font_FreeSansBold46.c  ui_font_FreeSansBold48.c  ui_font_montserrat_24.c
components/ui/weather/: weather_chart_adapter.c  weather_chart_adapter.h
main/: CMakeLists.txt  global_touch.c  global_touch.h  idf_component.yml  main.cpp
(+81 files in other folders)
